# kokkos

./: .gitattributes  .jenkins
.gitlab/: alcf-gitlab-ci.yml  hpsf-gitlab-ci.yml  nersc-gitlab-ci.yml  olcf-gitlab-ci.yml
.jenkins/: continuous.groovy  nightly.groovy
benchmarks/: CMakeLists.txt
benchmarks/vector_ping_pong/: CMakeLists.txt  (+2 more)
cmake/: KokkosConfig.cmake.in  KokkosConfigCommon.cmake.in  KokkosCore_config.h.in  kokkos_arch.cmake  kokkos_enable_options.cmake  kokkos_functions.cmake  kokkos_tpls.cmake  kokkos_tribits.cmake
example/build_cmake_installed_mark_kokkos_files/lib_depending_on_lib_with_private_kokkos_dependency/: CMakeLists.txt  full.cpp
example/build_cmake_installed_mark_library/: CMakeLists.txt
example/build_cmake_installed_mark_library/lib_depending_on_lib_with_private_kokkos_dependency/: CMakeLists.txt
example/build_cmake_installed_mark_library/lib_with_private_kokkos_dependency/: CMakeLists.txt
example/build_cmake_installed_mark_library/lib_with_public_kokkos_dependency/: CMakeLists.txt
example/build_cmake_installed_mark_library/lib_without_kokkos_dependency/: CMakeLists.txt
example/build_installed/: CMakeLists.txt
example/build_installed/complex/: CMakeLists.txt
example/build_installed/complex/lib_with_public_kokkos_dependency/: CMakeLists.txt
example/build_installed/complex_mark_kokkos_files/: CMakeLists.txt
example/build_installed/complex_mark_kokkos_files/lib_with_private_dependency_on_lib_with_public_kokkos_dependency/: CMakeLists.txt
example/build_installed/complex_mark_library/: CMakeLists.txt
example/build_installed/complex_mark_library/lib_with_private_kokkos_dependency/: CMakeLists.txt
example/build_installed/complex_mark_library/lib_with_public_kokkos_dependency/: CMakeLists.txt
example/build_installed/example_source/: bar.cpp  example_private_kokkos.cpp  example_public_kokkos.cpp  source_with_kokkos_dependency.cpp
example/build_installed/example_source/lib_depending_on_lib_with_public_kokkos_dependency/: fupp.cpp
example/build_installed/example_source/lib_with_private_dependency_on_lib_with_private_kokkos_dependency/: source_with_private_dependency_on_lib_with_private_kokkos_dependency.cpp
example/build_installed/example_source/lib_with_private_dependency_on_lib_with_public_kokkos_dependency/: source_with_private_dependency_on_lib_with_public_kokkos_dependency.cpp
example/build_installed/example_source/lib_with_private_kokkos_dependency/: bla.cpp  furr.cpp  header_with_private_kokkos_dependency.h  lib_with_private_kokkos_dependency.h  source_merging_prints.cpp  source_with_public_kokkos_dependency.cpp  source_without_kokkos_dependency.cpp
example/build_installed/example_source/lib_with_public_dependency_on_lib_with_private_kokkos_dependency/: source_with_public_dependency_on_lib_with_private_kokkos_dependency.cpp
example/build_installed/example_source/lib_with_public_dependency_on_lib_with_public_kokkos_dependency/: lib_with_public_dependency_on_lib_with_public_kokkos_dependency.h  source_with_public_dependency_on_lib_with_public_kokkos_dependency.cpp
example/build_installed/example_source/lib_with_public_kokkos_dependency/: fuzz.cpp  lib_with_public_kokkos_dependency.h  source_with_public_kokkos_dependency.cpp
example/build_installed/example_source/lib_without_kokkos_dependency/: foo.cpp
example/build_installed/installed/: CMakeLists.txt
example/build_installed/installed/lib_depending_on_lib_with_private_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed/lib_depending_on_lib_with_public_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed/lib_with_private_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed/lib_with_public_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed/lib_without_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_kokkos_files/: CMakeLists.txt
example/build_installed/installed_mark_kokkos_files/lib_depending_on_lib_with_private_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_kokkos_files/lib_depending_on_lib_with_public_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_kokkos_files/lib_with_private_dependency_on_lib_with_private_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_kokkos_files/lib_with_private_dependency_on_lib_with_public_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_kokkos_files/lib_with_private_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_kokkos_files/lib_with_public_dependency_on_lib_with_private_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_kokkos_files/lib_with_public_dependency_on_lib_with_public_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_kokkos_files/lib_with_public_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_library/: CMakeLists.txt
example/build_installed/installed_mark_library/lib_depending_on_lib_with_private_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_library/lib_with_private_dependency_on_lib_with_private_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_library/lib_with_private_dependency_on_lib_with_public_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_library/lib_with_private_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_library/lib_with_public_dependency_on_lib_with_private_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_library/lib_with_public_dependency_on_lib_with_public_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_library/lib_with_public_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_library/lib_without_kokkos_dependency/: CMakeLists.txt
example/build_installed/installed_mark_library_new/: CMakeLists.txt
example/build_installed/simple/: CMakeLists.txt
tmp/metal-project/: CMakeLists.txt  main.cpp
(+64 files in other folders)
